--- a/style.css
+++ b/style.css
@@ -111,7 +111,61 @@ a {
 
 
 
-
+@media screen and (max-width: 540px) {
+    #promoblur {
+        height: 25%;
+        margin-top: 0.5%;
+        margin-bottom: 0.5%;
+        display: none;
+        border: whitesmoke 5px solid;
+    }
+    #apromo:hover #promoblur{
+        height: 25%;
+        margin-top: 0.5%;
+        margin-bottom: 0.5%;
+        display: inline-block;
+        border: whitesmoke 5px solid;
+    }
+    #apromo:hover #promo{
+        height: 25%;
+        margin-top: 0.5%;
+        margin-bottom: 0.5%;
+        display: none;
+        border: whitesmoke 5px solid;
+    }
+    #promo1 {
+        margin-left: 4%;
+        height: 25%;
+        margin-top: 0.5%;
+        margin-bottom: 0.5%;
+        display: inline-block;
+        border: whitesmoke 5px solid;
+    }
+    #promo1blur {
+        margin-left: 4%;
+        height: 25%;
+        margin-top: 0.5%;
+        margin-bottom: 0.5%;
+        display: none;
+        border: whitesmoke 5px solid;
+    }
+    #apromo1:hover #promo1blur{
+        margin-left: 4%;
+        height: 25%;
+        margin-top: 0.5%;
+        margin-bottom: 0.5%;
+        display: inline-block;
+        border: whitesmoke 5px solid;
+    }
+    #apromo1:hover #promo1{
+        margin-left: 4%;
+        height: 25%;
+        margin-top: 0.5%;
+        margin-bottom: 0.5%;
+        display: none;
+        border: rgb(245, 245, 245) 5px solid;
+    }
+}
 #promo {
     height: 45%;
     margin-top: 0.5%;
