--- a/stylemobile.css
+++ b/stylemobile.css
@@ -1,4 +1,103 @@
 @media (max-width: 1115px) {
+    #band1 {
+        background: rgb(158, 14, 14);
+        height: 80px;
+        width: auto;
+    }
+    #band2 {
+        background: rgb(158, 14, 14);
+        height: auto;
+        width: auto;
+        margin-left: 10%;
+        margin-right: 10%;
+     }
+    #band3 {
+        background: rgb(158, 14, 14);
+        height: auto;
+        width: auto;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    #band4 {
+        background: lightgray;
+        height: auto;
+        width: auto;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    #band5 {
+        background: rgb(158, 14, 14);
+        height: 80;
+        width: auto;
+    }
+    .images {
+        height: 178;
+        width: 250;
+    }
+    .images1 {
+        height: 30;
+        width: 30 ;
+    }
+    #tablepromo {
+        display: inline-block;
+        margin-left: 1%;
+        margin-right: auto;    
+    }
+    .tdpromo {
+        text-align: center;
+        height: 48;
+        width: 200px;
+    }
+    #button {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        background: whitesmoke;
+        font-weight: bold;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    #button:hover {
+        background: lightgray;
+    }
+    .txtpromo {
+        font-size: 16;
+        text-align: center;
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: lighter
+    }
+    body {
+        background-color: whitesmoke;
+        
+    }
+    h1 {
+        text-align: center;
+        color: whitesmoke;
+        font-size: 60px;
+        font-weight: bold;
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    #products {
+        color: whitesmoke;
+        font-size: 25px;
+        font-weight: bold;
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        text-align: left;
+        margin-left: 2%;
+    }
+    .hottxt {
+        text-align: center;
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: bold;
+    }
+    a {
+         text-decoration: none; 
+    }
+    .dilla {
+        font-size: 10px;
+        color: lightgray;
+        text-decoration: line-through;
+        display: inline-block;
+    }
     #promo {
         height: 10%;
         width: 60%;
