--- a/stylemobile.css
+++ b/stylemobile.css
@@ -48,6 +48,12 @@
         height: 48;
         width: 200px;
     }
+    .tdpromo1 {
+        text-align: center;
+        height: 48;
+        width: 200px;
+        color: black;
+    }
     #button {
         width: 100%;
         height: 100%;
