--- a/stylemobile.css
+++ b/stylemobile.css
@@ -39,21 +39,21 @@
         width: 30 ;
     }
     #tablepromo {
-        display: inline-block;
+        display: inblock;
         margin-left: 1%;
         margin-right: auto;    
     }
     .tdpromo {
         text-align: center;
-        height: 48px;
-        width: 200px;
+        height: 80px;
+        width: 800px;
         color: black;
-
     }
     #button {
         width: 100%;
         height: 100%;
         border-radius: 10px;
+        font-size: 26px;
         background: whitesmoke;
         font-weight: bold;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -104,37 +104,41 @@
         height: 10%;
         width: 60%;
         margin-top: 0.5%;
-        vertical-align: 10%;
-        margin-bottom: 0.5%;
-        display: inline-block;
+        margin-bottom: 1%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
         border: whitesmoke 5px solid;t
     }
     #promoblur {
         height: 10%;
         width: 60%;
         margin-top: 0.5%;
-        vertical-align: 10%;
-        margin-bottom: 0.5%;
+        margin-bottom: 1%;
+        margin-left: auto;
+        margin-right: auto;
         display: none;
-        border: whitesmoke 5px solid;
+        border: whitesmoke 5px solid;t
     }
     #apromo:hover #promoblur{
         height: 10%;
         width: 60%;
         margin-top: 0.5%;
-        vertical-align: 10%;
-        margin-bottom: 0.5%;
-        display: inline-block;
-        border: whitesmoke 5px solid;
+        margin-bottom: 1%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        border: whitesmoke 5px solid;t
     }
     #apromo:hover #promo{
         height: 10%;
         width: 60%;
         margin-top: 0.5%;
-        vertical-align: 10%;
-        margin-bottom: 0.5%;
+        margin-bottom: 1%;
+        margin-left: auto;
+        margin-right: auto;
         display: none;
-        border: whitesmoke 5px solid;
+        border: whitesmoke 5px solid;t
     }
     #promo1 {
         margin-left: 1%;
@@ -142,7 +146,7 @@
         width: 15%;
         margin-top: 0.5%;
         margin-bottom: 0.5%;
-        display: inline-block;
+        display: none;
         border: whitesmoke 5px solid;
     }
     #promo1blur {
@@ -160,7 +164,7 @@
         width: 15%;
         margin-top: 0.5%;
         margin-bottom: 0.5%;
-        display: inline-block;
+        display: none;
         border: whitesmoke 5px solid;
     }
     #apromo1:hover #promo1{
