--- a/stylemobile.css
+++ b/stylemobile.css
@@ -39,13 +39,13 @@
         width: 30 ;
     }
     #tablepromo {
-        display: inblock;
+        display: block;
         margin-left: 1%;
         margin-right: auto;    
     }
     .tdpromo {
         text-align: center;
-        height: 80px;
+        height: 60px;
         width: 800px;
         color: black;
     }
@@ -111,8 +111,8 @@
         border: whitesmoke 5px solid;t
     }
     #promoblur {
-        height: 10%;
-        width: 60%;
+        height: 20%;
+        width: 70%;
         margin-top: 0.5%;
         margin-bottom: 1%;
         margin-left: auto;
