--- a/style.css
+++ b/style.css
@@ -24,14 +24,30 @@
     margin-left: 10%;
     margin-right: 10%;
 }
+#band33 {
+    background: rgb(158, 14, 14);
+    height: auto;
+    width: auto;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+#band44 {
+    background: lightgray;
+    height: auto;
+    width: auto;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 #band5 {
     background: rgb(158, 14, 14);
     height: 80;
     width: auto;
+    margin-top: auto
+    
 }
 .images {
     height: 178;
-    width: 200;
+    width: 250;
 }
 .images1 {
     height: 30;
@@ -97,7 +113,10 @@ a {
     text-decoration: line-through;
     display: inline-block;
 }
+#COCK:default #band4 {
+    display: none;
 
+}
 
 
 
@@ -170,6 +189,6 @@ a {
     display: none;
     border: rgb(245, 245, 245) 5px solid;
 }
-.images:hover .imagesoverlay{
-    background: rgba(rgb(202, 202, 202), rgb(214, 214, 214), rgb(202, 202, 202), 1);
+.images:hover .images{
+    opacity: 0.5;
 }
