--- a/style1.css
+++ b/style1.css
@@ -48,8 +48,8 @@ a {
     text-decoration: none; 
 }
 .images {
-    height: 178;
-    width: 250;
+    height: 200;
+    width: 200;
 }
 #tableproduct {
     margin-left: 5%;
@@ -59,6 +59,10 @@ a {
     background: whitesmoke;
     vertical-align: top;
     text-align: left;
+}
+.trproduct {
+    height: 210px;
+    background-color: white;
 }
 .tdtext {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
