--- a/stylemobile.css
+++ b/stylemobile.css
@@ -69,7 +69,6 @@
     }
     body {
         background-color: whitesmoke;
-        
     }
     h1 {
         text-align: center;
@@ -107,18 +106,18 @@
         margin-bottom: 1%;
         margin-left: auto;
         margin-right: auto;
-        display: block;
-        border: whitesmoke 5px solid;t
+        display: inline-block;
+        border: whitesmoke 5px solid;
     }
     #promoblur {
-        height: 20%;
-        width: 70%;
+        height: 10%;
+        width: 60%;
         margin-top: 0.5%;
         margin-bottom: 1%;
         margin-left: auto;
         margin-right: auto;
         display: none;
-        border: whitesmoke 5px solid;t
+        border: whitesmoke 5px solid;
     }
     #apromo:hover #promoblur{
         height: 10%;
@@ -127,8 +126,8 @@
         margin-bottom: 1%;
         margin-left: auto;
         margin-right: auto;
-        display: block;
-        border: whitesmoke 5px solid;t
+        display: inline-block;
+        border: whitesmoke 5px solid;
     }
     #apromo:hover #promo{
         height: 10%;
@@ -138,7 +137,7 @@
         margin-left: auto;
         margin-right: auto;
         display: none;
-        border: whitesmoke 5px solid;t
+        border: whitesmoke 5px solid;
     }
     #promo1 {
         margin-left: 1%;
@@ -146,7 +145,7 @@
         width: 15%;
         margin-top: 0.5%;
         margin-bottom: 0.5%;
-        display: none;
+        display: inline-block;
         border: whitesmoke 5px solid;
     }
     #promo1blur {
@@ -164,7 +163,7 @@
         width: 15%;
         margin-top: 0.5%;
         margin-bottom: 0.5%;
-        display: none;
+        display: inline-block;
         border: whitesmoke 5px solid;
     }
     #apromo1:hover #promo1{
@@ -179,4 +178,5 @@
     .images {
         height: 140;
         width: 140;
+    }
 }
