--- a/stylemobile.css
+++ b/stylemobile.css
@@ -40,7 +40,7 @@
     }
     #tablepromo {
         display: block;
-        margin-left: 3%;
+        margin-left: auto;
         margin-right: auto;    
     }
     .tdpromo {
